# Synthetic_audio_pico

./: CMakeLists.txt  beep_beep_rev.c
